# dnd-vtt

./: Cargo.toml
client/: package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.js  vite.config.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src/routes/: +page.svelte
server/: Cargo.toml
server/src/: http.rs  main.rs
